--- a/tasks/198-perms-usergroup.yml
+++ b/tasks/198-perms-usergroup.yml
@@ -1,69 +1,27 @@
 ---
 
-### admins
-
-- name: Create a user group - admins
+- name: Set user group
   theforeman.foreman.usergroup:
     server_url: "{{ foreman_url_app }}"
     username: "{{ foreman_admin_username }}"
     password: "{{ foreman_admin_password }}"
     validate_certs: false
-    name: admins
-    admin: false
-    roles:
-      - Access dashboard
-      - Env production
-      - Locations users
-      - Usergroups users
-      - Smart proxies users
-      - Compute profiles users
-      - Compute resources users opn
-      - Hostgroups admins
-      - Hosts admins
-      - Ansible admins
+    name: "{{ item.name }}"
+    admin: "{{ item.admin }}"
+    roles: "{{ item.roles }}"
     state: present
+  loop: "{{ foreman_usergroup }}"
+  delegate_to: localhost
 
-# - name: Create an external user group - tfm-admins
-#   theforeman.foreman.external_usergroup:
-#     server_url: "{{ foreman_url_app }}"
-#     username: "{{ foreman_admin_username }}"
-#     password: "{{ foreman_admin_password }}"
-#     validate_certs: false
-#     name: tfm-admins
-#     auth_source: lab-ldap
-#     usergroup: admins
-#     state: present
-
-### sysadm
-
-- name: Create a user group - sysadm
-  theforeman.foreman.usergroup:
+- name: Set external user group
+  theforeman.foreman.external_usergroup:
     server_url: "{{ foreman_url_app }}"
     username: "{{ foreman_admin_username }}"
     password: "{{ foreman_admin_password }}"
     validate_certs: false
-    name: sysadm
-    admin: false
-    roles:
-      - Access dashboard
-      - Env production
-      - Locations users
-      - Usergroups users
-      - Smart proxies users
-      - Compute profiles users
-      - Compute resources users opn
-      - Hostgroups users
-      - Hosts admins
-      - Ansible admins
+    name: "{{ item.name }}"
+    auth_source: "{{ item.auth_source }}"
+    usergroup: "{{ item.usergroup }}"
     state: present
-
-# - name: Create an external user group - tfm-sysadm
-#   theforeman.foreman.external_usergroup:
-#     server_url: "{{ foreman_url_app }}"
-#     username: "{{ foreman_admin_username }}"
-#     password: "{{ foreman_admin_password }}"
-#     validate_certs: false
-#     name: tfm-sysadm
-#     auth_source: lab-ldap
-#     usergroup: sysadm
-#     state: present
+  loop: "{{ foreman_external_usergroup }}"
+  delegate_to: localhost
